bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on that page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* somehow pam_unix has started forcing the user prompt to be "login: ".
  This is entirely inapropriate as it overrides PAM_USER_PROMPT. (Bug
  486361 - agmorgan).
* added a static module helper library object includes a few changes
  to examples/xsh.c for testing purposes, and also modified the
  pam_rhosts_auth module to use this new library. (Bug 490938 - agmorgan)
* documentation: random typo fixes from Nalin and more stuff from me
  (Bug 476949, Tasks 43507, 17426 - agmorgan)
* pam_unix: fix 'likeauth' to kill off the memory leak once and for all.
  (Bug 483959 - vorlon)
* pam_unix: restore handling of 'likeauth' argument to a known working
  state; prettify AUTH_RETURN macro; remove redundant argv checks in
  pam_sm_setcred() (Bugs 483959, 113596 - vorlon)
* pam_cracklib: another try at implementing similar() from Harald
  Welte and Nalin (Bugs 436053, 476957 - agmorgan)
* pam_access: default access.conf file contained a type (console
  instead of LOCAL) fix from Nalin (Bug 476934 - agmorgan)
* pam_unix: fixed bizarre memory leak pointed out by Fernando Trias
  (Bug 483959 - agmorgan)
* misc string comparison length checking changes from Nalin. Modules
  touched, pam_cracklib, pam_listfile, pam_unix, pam_wheel (Bug 476947 -
  agmorgan)
* pam_userdb: require that all of typed password matches that in
  database report and fix from Vladimir Pastukhov. (Bug 484252 - agmorgan)
* pam_malloc: revived malloc debugging code, now tied to
  --enable-memory-debug and added strdup() support (Bug 485454 - agmorgan)
* pam_tally: Nalin's fix for lastlog corruption (Bug 476985 - agmorgan)